refactor: 批量优化代码注释与细节调整
1.  补全多个类的javadoc参数注释，修正Ali1688Api枚举的注释位置
2.  将单行Javadoc改写为多行标准格式
3.  替换List.get(0)为更现代的getFirst()方法
4.  修正变量描述笔误与Jackson配置方法调用
5.  移除无用的Jackson导入与空行